META: Refactor minoskrnl to neoskrnl.

--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ xcuserdata/
 
 public/tools/make_app/dist/make_app
 
-minoskrnl/minoskrnl.xcodeproj/project.xcworkspace/xcshareddata/
+neoskrnl/neoskrnl.xcodeproj/project.xcworkspace/xcshareddata/
 
 html/
 latex/
